# example-unicode

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: input.c  main.c  sort.c
tests/data/: lorem-ipsum-utf-8.txt
